apps/argocd-apps/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingressroute
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.home.romangzz.com`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
      services:
        - name: argocd-server
          port: 443
          serversTransport: argocd-transport
